--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   </head>
   <body>
     <h1>Hello Git</h1>
+    <input type="text" placeholder="Enter your email" />
+    <input type="password" placeholder="Enter your password" />
+    <input type="submit" value="Login" />
     <script src="script.js"></script>
   </body>
 </html>
